--- a/gthub/test-site/index.html
+++ b/gthub/test-site/index.html
@@ -12,7 +12,7 @@
     <img src="C:\Users\admin\Python\gthub\test-site\images\dark-ninga.png" alt="My test image" />
     <h1>Welcome to GTHub!</h1>
     <p>Click this buttom to get the dark mode</p>
-    <button>切换用户</button>
+    <button>Switch User</button>
     <script src="scripts/main.js" defer></script>
   </body>
 </html>
